<resources>
    <string name="app_name">Asrar</string>
    <string name="insert_user_pass">لطفا نام کاربری و کلمه عبور خود را وارد کنید</string>
    <string name="id">شماره پرسنلی</string>
    <string name="pass">کلمه عبور</string>
    <string name="Enter">ورود</string>
    <string name="FirstName">نام :</string>
    <string name="LastName">نام خانوادگی :</string>
    <string name="major">رشته تحصیلی :</string>
    <string name="StudentCode">شماره دانشجویی :</string>
    <string name="IsPresent">وضعیت حضور :</string>
    <string name="unknown">نا مشخص</string>
    <string name="pull_down">برای بروز رسانی صفحه را به پایین بکشید</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="about_us">مؤسسه آموزش عالي اسرار تحت قانون تأسيس موسسات آموزش عالي غيردولتي-غيرانتفاعی از سال 1386 با کسب مجوز از وزارت علوم، تحقيقات و فناوري در زمينه فنی و مهندسی فعاليت خود را شروع کرد. پذيرش دانشجو در اين مؤسسه مانند ساير دانشگاه ها و مؤسسات آموزش عالي وابسته به وزارت علوم، تحقيقات و فناوري توسط سازمان سنجش آموزش کشور صورت مي پذيرد. پذيرفته شدگان از مرحله ثبت نام تا مرحله فراغت از تحصيل از نظر آموزشي، دانشجويي، انضباطي، پرداخت شهريه و … تابع مقررات مصوب شوراي عالي انقلاب فرهنگي و وزارت علوم، تحقيقات و فناوري مي باشند. در حال حاضر، اين مؤسسه در دوره كارداني و كارشناسي و کارشناسی ارشد از طريق كنكور سراسري دانشجو مي پذيرد.</string>
    <string name="about_company">درباره موسسه</string>
    <string name="Class_List">لیست کلاس های امروز</string>
    <string name="test">تست</string>
    <string name="test2">تست 2</string>
    <string name="main_page">صفحه اصلی</string>
    <string name="ClassName">نام کلاس</string>
    <string name="ClassCapacity">ظرفیت کلاس</string>
    <string name="ClassTime">ساعت کلاس</string>
    <string name="ClassCode">کد کلاس</string>
    <string name="ClassLocation">مکان کلاس</string>
    <string name="eror">خطا</string>
    <string name="zhury">لیست حضور و غیاب دانشجویان</string>
    <string name="lecturers">اساتید</string>
    <string name="weekly">برنامه هفتگی استاد</string>
    <string name="Students_all">دانشجویان</string>
    <string name="Fname">نام</string>
    <string name="Lname">نام خانوادگی</string>
    <string name="Tel">تلفن ثابت</string>
    <string name="mobile">موبایل</string>
    <string name="email">ایمیل</string>
    <string name="FatherName">نام پدر</string>
    <string name="codeMeli">کد ملی</string>
    <string name="PersonalNumber">شماره پرسنلی</string>
    <string name="DateBirthday">تاریخ تولد</string>
    <string name="TypeID">سمت</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="If_specefic_date">آیا تاریخ خاصی را مد نظر دارید ؟</string>
    <string name="please_choose">لطفا انتخاب نمایید</string>
    <string name="Saturday">Saturday</string>
    <string name="setting">تنظیمات</string>
    <string name="SendMessageToClassStudentsHint1">استاد ارجمند شما در حال فرستادن پیام به کل دانشجویان کلاس کد </string>
    <string name="SendMessageToClassStudentsHint2">میباشید ، توجه داشته باشید که پس از ارسال پیام امکان لغو کردن ارسال وجود ندارد و متن پیام پس از تایید اداره آموزش به کل دانشجویان کلاس ارسال خواهد شد </string>
    <string name="Remember_For">یاد آوری برای :</string>
    <string name="message_text">متن پیام</string>
    <string name="replace_note">شما برای این کلاس در تاریخ انتخاب شده قبلا یاد داشتی ثبت کرده اید . آیا میخواهید جایگزین شود ؟</string>
    <string name="cancell_class_text1">استاد گرامی شما در حال ارسال درخاست کنسل کردن کلاس کد </string>
    <string name="cancell_class_text2">میباشید . توجه داشته باشید که این درخاست پس از تایید اداره اموزش به اطلاع دانشجویان خواهد رسید . در صورت تمایل برای تشکیل دادن دوباره این کلاس , به عنوان کلاس جبرانی محسوب خواهد شد </string>


    <string-array name="Date_Array">
        <item>روز</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>30</item>
    </string-array>

    <string-array name="Month_Array">
        <item>ماه</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Year_Array">
        <item>سال</item>
        <item>1397</item>
        <item>1398</item>
        <item>1399</item>
    </string-array>

    <string-array name="term_Array">
        <item>ترم</item>
        <item>اول</item>
        <item>دوم</item>
        <item>تابستان</item>
    </string-array>
    <string name="title_activity_reminder_">Reminder_Activity</string>
    <string name="title_of_reminder">عنوان یادآوری :</string>
    <string name="exit_credential">خروج از حساب کاربری</string>
    <string name="close_to_app">خروج</string>
    <string name="guide">راهنما</string>


</resources>
