<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_class_list"
            android:title="@string/Class_List"
            android:icon="@drawable/ic_classroom"/>
    </group>

    <group android:checkableBehavior="single">
    <item
            android:id="@+id/nav_setting"
            android:title="@string/setting"
        android:icon="@drawable/ic_setting"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test2"
            android:title="برنامه هفتگی استاد"
            android:icon="@drawable/ic_commerce" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_company"
            android:icon="@drawable/ic_building"
            />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit_credential"
            android:title="@string/exit_credential"
            android:icon="@drawable/exit_to_credential" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_close_to_app"
            android:title="@string/close_to_app"
            android:icon="@drawable/close_to_app"
            />
    </group>

</menu>