<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.mersad.asrar.Activities.Employment_Info_Activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    >

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Relative_Employment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/useful_dark"
    android:gravity="center"
    android:padding="6dp"
    >




    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/upper_layout">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="مشخصات اساتید"
                android:textColor="@color/useful_light"

                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.CoordinatorLayout>


    <ImageView
        android:id="@+id/Employment_IV_profile_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:src="@drawable/ic_person"
        tools:ignore="ContentDescription"
        android:paddingTop="20dp"
        />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Employment_IV_profile_pic"
        android:layout_gravity="right|end"
        android:background="@color/useful_light"
        android:columnCount="3"
        android:elevation="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:rowCount="11"
        android:textDirection="rtl">


        <TextView

            android:id="@+id/Employment_Tv_Fname_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/Fname" />

        <TextView
            android:id="@+id/Employment_Tv_Fname"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/unknown" />


        <TextView
            android:id="@+id/Employment_Tv_Lname_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/Lname" />

        <TextView
            android:id="@+id/Employment_Tv_Lname"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/Employment_Tv_Tel_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/Tel" />

        <TextView
            android:id="@+id/Employment_Tv_Tel"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/unknown" />


        <TextView
            android:id="@+id/Employment_Tv_Mobile_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/mobile" />

        <TextView
            android:id="@+id/Employment_Tv_Mobile"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/unknown" />


        <TextView
            android:id="@+id/Employment_Tv_Email_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/email" />

        <TextView
            android:id="@+id/Employment_Tv_Email"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/Employment_Tv_FatherName_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="5"
            android:text="@string/FatherName" />

        <TextView
            android:id="@+id/Employment_Tv_FatherName"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/Employment_Tv_CodeMeli_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="6"
            android:text="@string/codeMeli" />


        <TextView
            android:id="@+id/Employment_Tv_CodeMeli"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/Employment_Tv_PersonalNumber_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="7"
            android:text="@string/PersonalNumber" />


        <TextView
            android:id="@+id/Employment_Tv_PersonalNumber"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/unknown" />

        <TextView
            android:id="@+id/Employment_Tv_DateBirthday_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="8"
            android:text="@string/DateBirthday" />

        <TextView
            android:id="@+id/Employment_Tv_DateBirthda"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/unknown" />


        <TextView
            android:id="@+id/Employment_Tv_TypeID_Lable"
            style="@style/TextViewModel"
            android:layout_column="2"
            android:layout_row="9"
            android:text="@string/TypeID" />

        <TextView
            android:id="@+id/Employment_Tv_TypeID"
            style="@style/TextViewModel"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/unknown" />

    </GridLayout>

</RelativeLayout>

    <android.support.design.widget.NavigationView

        android:id="@+id/nav_view"
        style="@style/NavigationView"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
      >
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

