<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Activities.Login_Activity"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/login_backgraund">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/Login_Layout"
        android:alpha="1"
        android:gravity="center_horizontal"
        android:background="@drawable/rectangle"
        android:backgroundTint="#6b3f51b5"
        android:padding="16dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:id="@+id/Login_Iv_Logo"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_asrar"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/insert_user_pass"
            android:id="@+id/Login_Tv_InsertUserPass"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#fce2e2"
            android:visibility="invisible"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login_edtUsername"
            android:hint="@string/id"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFFFFF"
            android:visibility="invisible"
            android:text="666"
            tools:ignore="TextFields" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Login_edt_pass"
            android:textColorHint="#FFFFFF"
            android:hint="@string/pass"
            android:visibility="invisible"
            android:text="123456"
            android:layout_marginTop="5dp"
             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enter"
            android:scaleX="1"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:visibility="visible"
            android:id="@+id/Login_btn_Enter"
            />
    </LinearLayout>



</RelativeLayout>