<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Students_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rectangle"
    android:elevation="5dp"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/Students_iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_blue" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|end"
            android:columnCount="3"
            android:elevation="5dp"
            android:padding="7dp"
            android:rowCount="5"

            >

            <TextView
                android:id="@+id/tvLableFirstName"
                style="@style/TextViewModel"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/FirstName" />

            <TextView
                android:id="@+id/tvLableLastName"
                style="@style/TextViewModel"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/LastName" />


            <TextView
                android:id="@+id/tvLableMajor"
                style="@style/TextViewModel"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/major" />

            <TextView
                android:id="@+id/tvLableStudentCode"
                style="@style/TextViewModel"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/StudentCode" />


            <TextView
                android:id="@+id/tvLableIsPresent"
                style="@style/TextViewModel"
                android:layout_column="2"
                android:layout_row="4"
                android:text="@string/IsPresent" />

            <TextView
                android:id="@+id/tvFirstName"
                style="@style/TextViewModel"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/tvLastName"
                style="@style/TextViewModel"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/unknown" />


            <TextView
                android:id="@+id/tvMajor"
                style="@style/TextViewModel"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/unknown" />

            <TextView
                android:id="@+id/tvStudentCode"
                style="@style/TextViewModel"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/unknown" />


            <TextView
                android:id="@+id/tvIsPresent"
                style="@style/TextViewModel"
                android:layout_column="1"
                android:layout_row="4"
                android:text="@string/unknown" />

            <ImageView
                android:id="@+id/ivStudentPic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowSpan="5"
                android:padding="20dp"
                android:src="@drawable/loading" />

            <!--<EditText-->
            <!--android:id="@+id/edtMemo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_column="0"-->
            <!--android:layout_columnSpan="2"-->
            <!--android:layout_row="5"-->
            <!--android:hint="additional info"-->
            <!--/>-->

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <EditText

                android:id="@+id/edtMemo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:hint="در صورت لزوم اینجا بنویسید"
                android:paddingLeft="4dp"
                android:paddingRight="4dp" />


            <TextView
                android:id="@+id/tvLableMemo"
                style="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:text="توضیحات :"
                android:textColor="#94171f" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
