<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Students_CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rectangle"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"

    app:cardBackgroundColor="#8cb7d7">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/background_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|end"
            android:padding="7dp"
            android:elevation="5dp"
            android:columnCount="3"
            android:rowCount="5"

            >

            <TextView
                style="@style/TextViewModel"
                android:id="@+id/tvLableFirstName"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/FirstName" />

            <TextView
                style="@style/TextViewModel"
                android:id="@+id/tvLableLastName"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/LastName" />


            <TextView
                style="@style/TextViewModel"
                android:id="@+id/tvLableMajor"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/major" />

            <TextView
                style="@style/TextViewModel"
                android:id="@+id/tvLableStudentCode"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/StudentCode" />


            <TextView
                style="@style/TextViewModel"
                android:id="@+id/tvLableIsPresent"
                android:layout_column="2"
                android:layout_row="4"
                android:text="@string/IsPresent" />

            <View
                style="@style/View_Item_Shimer_Class"
                android:layout_column="1"
                android:layout_row="0" />


            <View
                style="@style/View_Item_Shimer_Class"
                android:layout_column="1"
                android:layout_row="1"
                 />


            <View
                style="@style/View_Item_Shimer_Class"
                android:layout_column="1"
                android:layout_row="2"
             />

            <View
                style="@style/View_Item_Shimer_Class"
                android:layout_column="1"
                android:layout_row="3"
              />


            <View
                style="@style/View_Item_Shimer_Class"

                android:layout_column="1"
                android:layout_row="4"
            />

            <View
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:background="#777777"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_marginRight="5dp"
                android:layout_rowSpan="5" />



        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">


            <EditText

                android:id="@+id/edtMemo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:background="@drawable/rectangle"
                android:hint="در صورت لزوم اینجا بنویسید" />


            <TextView
                style="TextView"
                android:id="@+id/tvLableMemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:textColor="#94171f"
                android:text="توضیحات :" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
